[gd_scene load_steps=12 format=3 uid="uid://donsbhqex4hb4"]

[ext_resource type="Script" path="res://magnetic field calculator.gd" id="1_ly62s"]
[ext_resource type="Script" path="res://cam_root.gd" id="1_npiqc"]
[ext_resource type="Script" path="res://UI/h_slider.gd" id="2_23dil"]
[ext_resource type="PackedScene" uid="uid://bqola1pqng8gh" path="res://small arrow/small arrow.tscn" id="2_wtrng"]
[ext_resource type="PackedScene" uid="uid://c0bwsnr5u6qbb" path="res://arrow/arrow.tscn" id="4_1em57"]
[ext_resource type="AudioStream" uid="uid://cdp34jh2s811f" path="res://assets/utomp3.com - Piano Note 2.mp3" id="6_88h62"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_jieia"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_kg3gn"]
sky_material = SubResource("ProceduralSkyMaterial_jieia")

[sub_resource type="Environment" id="Environment_4smcv"]
background_mode = 1
background_color = Color(0.0646965, 0.0646965, 0.0646965, 1)
sky = SubResource("Sky_kg3gn")
ambient_light_energy = 5.75
tonemap_mode = 2
glow_enabled = true
glow_bloom = 0.62

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_km4r4"]
transparency = 1
albedo_color = Color(0, 0, 0, 0.301961)

[sub_resource type="BoxMesh" id="BoxMesh_h2aa8"]
material = SubResource("StandardMaterial3D_km4r4")
size = Vector3(2, 0.001, 2)

[node name="Main" type="Node3D" node_paths=PackedStringArray("arrow", "camera")]
script = ExtResource("1_ly62s")
arrow = NodePath("Arrow")
camera = NodePath("Cam Root/Camera3D")
plane = Plane(0, 1, 0, 0.2)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_4smcv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, 0.75, -0.433013, 0, 0, 0)
shadow_enabled = true

[node name="Plane" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_h2aa8")

[node name="Small Arrow" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, -0.134456)

[node name="Small Arrow2" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, -0.134456)

[node name="Small Arrow3" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, -0.134456)

[node name="Small Arrow4" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, -0.134456)

[node name="Small Arrow5" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, -0.134456)

[node name="Small Arrow6" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, -0.134456)

[node name="Small Arrow28" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0317297, 0, 0.788863)

[node name="Small Arrow7" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, 0.781608)

[node name="Small Arrow23" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, 0.781608)

[node name="Small Arrow24" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, 0.781608)

[node name="Small Arrow25" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, 0.781608)

[node name="Small Arrow26" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, 0.781608)

[node name="Small Arrow27" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, 0.781608)

[node name="Small Arrow8" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, -0.451109)

[node name="Small Arrow9" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, -0.451109)

[node name="Small Arrow10" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, -0.451109)

[node name="Small Arrow22" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0439094, 0, -0.136659)

[node name="Small Arrow11" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0265256, 0, -0.451109)

[node name="Small Arrow12" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, -0.451109)

[node name="Small Arrow13" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, -0.451109)

[node name="Small Arrow14" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, -0.451109)

[node name="Small Arrow15" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, -0.773751)

[node name="Small Arrow16" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, -0.773751)

[node name="Small Arrow17" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, -0.773751)

[node name="Small Arrow18" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0265256, 0, -0.773751)

[node name="Small Arrow19" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, -0.773751)

[node name="Small Arrow20" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, -0.773751)

[node name="Small Arrow21" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, -0.773751)

[node name="Small Arrow29" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, 0.516097)

[node name="Small Arrow30" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, 0.516097)

[node name="Small Arrow31" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, 0.516097)

[node name="Small Arrow32" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0265256, 0, 0.516097)

[node name="Small Arrow33" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, 0.516097)

[node name="Small Arrow34" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, 0.516097)

[node name="Small Arrow35" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, 0.516097)

[node name="Small Arrow36" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.526526, 0, 0.193456)

[node name="Small Arrow37" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.776526, 0, 0.193456)

[node name="Small Arrow38" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.276526, 0, 0.193456)

[node name="Small Arrow39" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.0265256, 0, 0.193456)

[node name="Small Arrow40" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.430106, 0, 0.193456)

[node name="Small Arrow41" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.180106, 0, 0.193456)

[node name="Small Arrow42" parent="Plane" instance=ExtResource("2_wtrng")]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, 0.680106, 0, 0.193456)

[node name="Cam Root" type="Node3D" parent="." node_paths=PackedStringArray("camera", "arrow")]
script = ExtResource("1_npiqc")
camera = NodePath("Camera3D")
plane = Plane(0, 1, 0, 0.2)
arrow = NodePath("../Arrow")

[node name="Camera3D" type="Camera3D" parent="Cam Root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.303921, 2)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HSlider" type="HSlider" parent="CanvasLayer" node_paths=PackedStringArray("plane")]
offset_left = 13.0
offset_top = 18.0
offset_right = 294.0
offset_bottom = 34.0
min_value = -100.0
script = ExtResource("2_23dil")
plane = NodePath("../../Plane")

[node name="HSlider2" type="HSlider" parent="CanvasLayer"]
offset_left = 13.0
offset_top = 103.0
offset_right = 294.0
offset_bottom = 119.0
min_value = -100.0

[node name="Button" type="Button" parent="CanvasLayer"]
offset_left = 19.0
offset_top = 54.0
offset_right = 194.0
offset_bottom = 85.0
text = "Add Standing Current"

[node name="Button4" type="Button" parent="CanvasLayer"]
offset_left = 636.0
offset_top = 53.0
offset_right = 811.0
offset_bottom = 84.0
text = "Add Circular Current"

[node name="Button5" type="Button" parent="CanvasLayer"]
offset_left = 822.0
offset_top = 53.0
offset_right = 1009.0
offset_bottom = 84.0
text = "Add Solenoidal Current"

[node name="Button2" type="Button" parent="CanvasLayer"]
offset_left = 203.0
offset_top = 54.0
offset_right = 410.0
offset_bottom = 85.0
text = "Remove Current"

[node name="Button3" type="Button" parent="CanvasLayer"]
offset_left = 416.0
offset_top = 53.0
offset_right = 623.0
offset_bottom = 84.0
text = "Current Direction: "

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 306.0
offset_top = 97.0
offset_right = 375.0
offset_bottom = 120.0
text = "Current: "

[node name="Label3" type="Label" parent="CanvasLayer"]
offset_left = 308.0
offset_top = 13.0
offset_right = 377.0
offset_bottom = 36.0
text = "Plane Height"

[node name="HSlider3" type="HSlider" parent="CanvasLayer"]
offset_left = 793.0
offset_top = 11.0
offset_right = 1074.0
offset_bottom = 27.0
min_value = 1.0
max_value = 180.0
value = 1.0

[node name="Label4" type="Label" parent="CanvasLayer"]
offset_left = 1088.0
offset_top = 6.0
offset_right = 1187.0
offset_bottom = 29.0
text = "Zoom"

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 133.0
offset_right = 90.0
offset_bottom = 156.0
text = "Magnetic Field Strength: "

[node name="Label5" type="Label" parent="CanvasLayer"]
offset_left = 19.0
offset_top = 159.0
offset_right = 211.0
offset_bottom = 182.0
text = "Position: "

[node name="Arrow" parent="." instance=ExtResource("4_1em57")]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_88h62")
autoplay = true
parameters/looping = true

[connection signal="value_changed" from="CanvasLayer/HSlider" to="CanvasLayer/HSlider" method="_on_value_changed"]
[connection signal="value_changed" from="CanvasLayer/HSlider2" to="." method="_on_h_slider_2_value_changed"]
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="CanvasLayer/Button5" to="." method="_on_button_5_pressed"]
[connection signal="pressed" from="CanvasLayer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Button3" to="." method="_on_button_3_pressed"]
[connection signal="value_changed" from="CanvasLayer/HSlider3" to="Cam Root" method="_on_h_slider_3_value_changed"]
